# wargaming-test-task

./: .gitignore  README.md
cpp/: CMakeLists.txt  main.cpp
cpp/src/first/: is_even.h
cpp/src/second/: cyclic_queue.h  cyclic_queue_dynamic_array.h  cyclic_queue_list.h
cpp/test/: CMakeLists.txt  my_allocator.h  simple_class.h  test-cyclic-queue-list.cpp  test-cyclic-queue.cpp  test-dynamic-cyclic-queue.cpp  test_even.cpp
python/second/: main.py
python/second/CyclesQueue/: __init__.py  arrayImpl.py  listImpl.py
python/second/test/: test.py
